# carson_clipperplus

./: CMakeLists.txt  Dockerfile  LICENSE.md  README.md  run
bindings/matlab/: CMakeLists.txt  clique_corenumber_mex.cpp  pmc_heuristic_mex.cpp
include/clipper/: clipper.h
include/clipperplus/: clipperplus_clique.h  clique_corenumber.h  clique_optimization.h  utils.h
include/pmc/: pmc_headers.h  pmc_heu.h  pmc_heuristic.h
src/: clipperplus_clique.cpp  clipperplus_test.cpp  clique_corenumber.cpp  clique_optimization.cpp  utils.cpp
test/cpp_tests/: CMakeLists.txt
test/cpp_tests/unit/: test_clipperplus_clique.cpp  test_clique_corenumber.cpp  test_utils.cpp
